--- a/app/views/users/login.rhtml
+++ b/app/views/users/login.rhtml
@@ -1,9 +1,11 @@
 
 <!--<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">-->
 <!--<link href="/var/www/disease_surveillance_dashboard/app/assets/stylesheets/bootstrap.css" rel="stylesheet">-->
+<%= javascript_include_tag("jquery-2.0.3.min") %>
+<%= javascript_include_tag("bootstrap.min") %>
 <%=  stylesheet_link_tag("bootstrap")%>
 
-<div id="login-overlay" class="modal-dialog">
+<div id="login-overlay" class="modal-dialog login-modal-content">
   <div class="modal-content">
     <div class="modal-header">
 
@@ -46,7 +48,64 @@
             <li><span class="fa fa-check text-success"></span> Download Books <small>(only premium customers)</small></li>
             <li><a href="/read-more/"><u>Read more</u></a></li>
           </ul>
-          <p><a href="/new-customer/" class="btn btn-info btn-block">Yes please, register now!</a></p>
+          <p><a href="#" onclick="showRegistrationForm();" class="btn btn-info btn-block">Yes please, register now!</a></p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<div class="col-lg-12">
+  <div class="modal fade" id="newReg" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+          <h4 class="modal-title" id="H4"> New Registration</h4>
+        </div>
+        <div class="modal-body">
+          <form role="form">
+            
+            <div class="form-group">
+              <label>First Name</label>
+              <input class="form-control" name="first_name" />
+            </div>
+
+            <div class="form-group">
+              <label>Last Name</label>
+              <input class="form-control" name="last_name" />
+            </div>
+
+            <div class="form-group">
+              <label>Phone #</label>
+              <input class="form-control" name="phone_number" />
+            </div>
+
+            <div class="form-group">
+              <label>Email</label>
+              <input class="form-control" />
+            </div>
+            
+            <div class="form-group">
+              <label>Username</label>
+              <input class="form-control" />
+            </div>
+            
+            <div class="form-group">
+              <label>Password</label>
+              <input class="form-control" />
+            </div>
+            <div class="form-group">
+              <label>Retype Password</label>
+              <input class="form-control" />
+            </div>
+
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
         </div>
       </div>
     </div>
@@ -54,7 +113,7 @@
 </div>
 
 <style type="text/css">
-  .modal-dialog {
+  .login-modal-content {
     left: 50%;
     padding-bottom: 30px;
     padding-top: 150px;
@@ -62,3 +121,11 @@
     width: 1010px;
   }
 </style>
+
+<script type="text/javascript">
+
+  function showRegistrationForm(){
+    jQuery('#newReg').modal('show');
+  }
+  
+</script>
