--- a/app/views/users/login.rhtml
+++ b/app/views/users/login.rhtml
@@ -1,9 +1,9 @@
-
+<title>Login</title>
 <!--<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">-->
 <!--<link href="/var/www/disease_surveillance_dashboard/app/assets/stylesheets/bootstrap.css" rel="stylesheet">-->
 <%= javascript_include_tag("jquery-2.0.3.min") %>
 <%= javascript_include_tag("bootstrap.min") %>
-<%=  stylesheet_link_tag("bootstrap")%>
+<%= stylesheet_link_tag("bootstrap")%>
 
 <div id="login-overlay" class="modal-dialog login-modal-content">
   <div class="modal-content">
@@ -61,52 +61,68 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-          <h4 class="modal-title" id="H4"> New Registration</h4>
+          <h4 class="modal-title" id="H4"> <b>Create Account</b></h4>
         </div>
-        <div class="modal-body">
-          <form role="form">
-            
+        <form role="form" class="form-horizontal" method="POST">
+          <div class="modal-body">
+
             <div class="form-group">
-              <label>First Name</label>
-              <input class="form-control" name="first_name" />
+              <label class="control-label col-lg-4" for="first_name">First Name</label>
+              <div class="col-lg-7">
+                <input type="text" name="first_name" class="form-control" placeholder="First Name" id="first_name" required/>
+              </div>
             </div>
 
             <div class="form-group">
-              <label>Last Name</label>
-              <input class="form-control" name="last_name" />
+              <label class="control-label col-lg-4" for="last_name">Last Name</label>
+              <div class="col-lg-7">
+                <input type="text" name="last_name_name" class="form-control" placeholder="Last Name" id="last_name" required/>
+              </div>
             </div>
 
             <div class="form-group">
-              <label>Phone #</label>
-              <input class="form-control" name="phone_number" />
+              <label class="control-label col-lg-4" for="phone_number">Phone #</label>
+              <div class="col-lg-7">
+                <input type="text" name="phone" class="form-control" placeholder="Phone Number" id="phone_number" required/>
+              </div>
             </div>
 
             <div class="form-group">
-              <label>Email</label>
-              <input class="form-control" />
-            </div>
-            
-            <div class="form-group">
-              <label>Username</label>
-              <input class="form-control" />
-            </div>
-            
-            <div class="form-group">
-              <label>Password</label>
-              <input class="form-control" />
-            </div>
-            <div class="form-group">
-              <label>Retype Password</label>
-              <input class="form-control" />
+              <label class="control-label col-lg-4" for="email">E-mail</label>
+              <div class="col-lg-7">
+                <input type="email" name="email" class="form-control" placeholder="E-mail" id="email" required/>
+              </div>
             </div>
 
-          </form>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
+
+            <div class="form-group">
+              <label class="control-label col-lg-4" for="username">Username</label>
+              <div class="col-lg-7">
+                <input type="username" name="username" class="form-control" placeholder="Username" id="username" required/>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <label class="control-label col-lg-4" for="password">Password</label>
+              <div class="col-lg-7">
+                <input type="password" name="password" class="form-control" placeholder="Password" id="password" required/>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <label class="control-label col-lg-4" for="confirm_password">Confirm Password</label>
+              <div class="col-lg-7">
+                <input type="password" name="confirm_password" class="form-control" placeholder="Confirm Password" id="confirm_password" required/>
+              </div>
+            </div>
+
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+            <input class="btn btn-primary " type="submit" value="Create Account"></input>
+          </div>
+        </form>
+
       </div>
     </div>
   </div>
