--- a/app/views/users/login.rhtml
+++ b/app/views/users/login.rhtml
@@ -34,7 +34,7 @@
                 <p class="help-block">(if this is a private computer)</p>
               </div>
               <button type="submit" class="btn btn-success btn-block">Login</button>
-              <a href="/forgot/" class="btn btn-default btn-block">Help to login</a>
+              <a href="#" onclick="showPasswordReminderForm();" class="btn btn-default btn-block">Help to login</a>
             </form>
           </div>
         </div>
@@ -128,6 +128,40 @@
   </div>
 </div>
 
+
+
+<!-- PASSSWORD REMINDER -->
+<div class="col-lg-12">
+  <div class="modal fade" id="passwordReminder" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+          <h4 class="modal-title" id="H4"> <b>Password Reminder</b></h4>
+        </div>
+        <form role="form" class="form-horizontal">
+        <div class="modal-body">
+          
+            <div class="form-group">
+              <label class="control-label col-lg-4" for="email">E-mail Address</label>
+              <div class="col-lg-7">
+                <input type="email" name="email" class="form-control" placeholder="E-mail" id="email" required/>
+              </div>
+            </div>
+
+          
+        </div>
+
+        <div class="modal-footer">
+          <button type="submit" class="btn btn-danger btn-block btn-lg">Reset Password</button>
+        </div>
+          
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
 <style type="text/css">
   .login-modal-content {
     left: 50%;
@@ -136,6 +170,10 @@
     right: auto;
     width: 1010px;
   }
+
+  body{
+    background-color: #ddd;
+}
 </style>
 
 <script type="text/javascript">
@@ -143,5 +181,9 @@
   function showRegistrationForm(){
     jQuery('#newReg').modal('show');
   }
-  
+
+  function showPasswordReminderForm(){
+    jQuery('#passwordReminder').modal('show');
+  }
+
 </script>
