--- a/app/views/users/login.rhtml
+++ b/app/views/users/login.rhtml
@@ -147,7 +147,7 @@
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
           <h4 class="modal-title" id="H4"> <b>Password Reminder</b></h4>
         </div>
-        <form role="form" class="form-horizontal">
+        <form role="form" action="/users/reset_password" class="form-horizontal" method="POST">
           <div class="modal-body">
 
             <div class="form-group">
