--- a/app/views/users/login.rhtml
+++ b/app/views/users/login.rhtml
@@ -15,7 +15,7 @@
       <div class="row">
         <div class="col-xs-6">
           <div class="well">
-            <form id="loginForm" method="POST" action="/login/" novalidate="novalidate">
+            <form id="loginForm" method="POST" action="/authenticate" novalidate="novalidate">
               <div class="form-group">
                 <label for="username" class="control-label">Username</label>
                 <input type="text" class="form-control" id="username" name="username" value="" required="" title="Please enter you username" placeholder="example@gmail.com"/>
@@ -27,7 +27,6 @@
                 <span class="help-block"></span>
               </div>
               <% if flash[:error] %>
-                Failed to create your account. We encountered the following errors:
                 <div id="loginErrorMsg" class="alert alert-error" style="color: #d9534f; font-weight: bold;"><%= flash[:error] %></div>
               <% end %>
                 
