--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -135,7 +135,7 @@
                 <li><a href="#"><i class="icon-gear"></i> Settings </a>
                 </li>
                 <li class="divider"></li>
-                <li><a href="login.html"><i class="icon-signout"></i> Logout </a>
+                <li><a href="/logout"><i class="icon-signout"></i> Logout </a>
                 </li>
               </ul>
 
