--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -21,6 +21,22 @@
     <link rel="stylesheet" href="/assets/css/theme.css" />
     <link rel="stylesheet" href="/assets/css/MoneAdmin.css" />
     <link rel="stylesheet" href="/assets/plugins/Font-Awesome/css/font-awesome.css" />
+
+
+
+
+
+    <link href="assets/css/jquery-ui.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/assets/plugins/uniform/themes/default/css/uniform.default.css" />
+    <link rel="stylesheet" href="/assets/plugins/inputlimiter/jquery.inputlimiter.1.0.css" />
+    <link rel="stylesheet" href="/assets/plugins/chosen/chosen.min.css" />
+    <link rel="stylesheet" href="/assets/plugins/colorpicker/css/colorpicker.css" />
+    <link rel="stylesheet" href="/assets/plugins/tagsinput/jquery.tagsinput.css" />
+    <link rel="stylesheet" href="/assets/plugins/daterangepicker/daterangepicker-bs3.css" />
+    <link rel="stylesheet" href="/assets/plugins/datepicker/css/datepicker.css" />
+    <link rel="stylesheet" href="/assets/plugins/timepicker/css/bootstrap-timepicker.min.css" />
+    <link rel="stylesheet" href="/assets/plugins/switch/static/stylesheets/bootstrap-switch.css" />
+    <link rel="stylesheet" href="assets/css/bootstrap-fileupload.min.css" />
     <!--END GLOBAL STYLES -->
 
     <!-- PAGE LEVEL STYLES -->
@@ -31,6 +47,36 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
+    <style>
+      #tags_tag{
+        width: 110px !important;
+      }
+      .chosen-container-multi .chosen-choices li.search-field input[type="text"] {
+        background-color: #ffffff;
+        background-image: none;
+        border: 1px solid #cccccc;
+        border-radius: 4px;
+        box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;
+        color: #555555;
+        display: block;
+        font-size: 14px;
+        height: 34px;
+        line-height: 1.42857;
+        padding: 6px 12px;
+        transition: border-color 0.15s ease-in-out 0s, box-shadow 0.15s ease-in-out 0s;
+        vertical-align: middle;
+        width: 100%;
+      }
+
+      .chosen-container-multi .chosen-choices li.search-choice {
+        line-height: 20px;
+        padding: 3px 20px 3px 5px;
+      }
+
+      .chosen-container-multi .chosen-choices li.search-choice .search-choice-close {
+        top: 8px;
+      }
+    </style>
   </head>
   <!-- END  HEAD-->
   <!-- BEGIN BODY-->
@@ -234,14 +280,17 @@
 
 
               <h2><%= @page_title %></h2>
-
-
-
+              <hr />
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  &nbsp;
+                </div>
+                <br />
+                <%= yield %>
+                
+              </div>
             </div>
           </div>
-
-          <hr />
-
 
 
 
@@ -287,6 +336,27 @@
     <script src="/assets/plugins/jquery-2.0.3.min.js"></script>
     <script src="/assets/plugins/bootstrap/js/bootstrap.min.js"></script>
     <script src="/assets/plugins/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+
+    <script src="/assets/js/jquery-ui.min.js"></script>
+    <script src="/assets/plugins/uniform/jquery.uniform.min.js"></script>
+    <script src="/assets/plugins/inputlimiter/jquery.inputlimiter.1.3.1.min.js"></script>
+    <script src="/assets/plugins/chosen/chosen.jquery.min.js"></script>
+    <script src="/assets/plugins/colorpicker/js/bootstrap-colorpicker.js"></script>
+    <script src="/assets/plugins/tagsinput/jquery.tagsinput.min.js"></script>
+    <script src="/assets/plugins/validVal/js/jquery.validVal.min.js"></script>
+    <script src="/assets/plugins/daterangepicker/daterangepicker.js"></script>
+    <script src="/assets/plugins/daterangepicker/moment.min.js"></script>
+    <script src="/assets/plugins/datepicker/js/bootstrap-datepicker.js"></script>
+    <script src="/assets/plugins/timepicker/js/bootstrap-timepicker.min.js"></script>
+    <script src="/assets/plugins/switch/static/js/bootstrap-switch.min.js"></script>
+    <script src="/assets/plugins/jquery.dualListbox-1.3/jquery.dualListBox-1.3.min.js"></script>
+    <script src="/assets/plugins/autosize/jquery.autosize.min.js"></script>
+    <script src="/assets/plugins/jasny/js/bootstrap-inputmask.js"></script>
+    <script src="assets/js/formsInit.js"></script>
+    <script src="assets/plugins/jasny/js/bootstrap-fileupload.js"></script>
+    <script>
+      $(function () { formInit(); });
+    </script>
     <!-- END GLOBAL SCRIPTS -->
   </body>
   <!-- END BODY-->
