--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -281,13 +281,28 @@
 
               <h2><%= @page_title %></h2>
               <hr />
+
+              <% if flash[:notice] %>
+                <div class="alert alert-success alert-dismissable">
+                  <button aria-hidden="true" data-dismiss="alert" class="close" type="button">×</button>
+                  <%= flash[:notice] %>
+                </div>
+              <% end %>
+
+              <% if flash[:error] %>
+                <div class="alert alert-danger alert-dismissable">
+                  <button aria-hidden="true" data-dismiss="alert" class="close" type="button">×</button>
+                  <%= flash[:error] %>
+                </div>
+              <% end %>
+
               <div class="panel panel-default">
                 <div class="panel-heading">
                   &nbsp;
                 </div>
                 <br />
                 <%= yield %>
-                
+
               </div>
             </div>
           </div>
@@ -354,8 +369,11 @@
     <script src="/assets/plugins/jasny/js/bootstrap-inputmask.js"></script>
     <script src="assets/js/formsInit.js"></script>
     <script src="assets/plugins/jasny/js/bootstrap-fileupload.js"></script>
-    <script>
+    <script src="/javascripts/jquery.media.js"></script> <!-- For rendering PDF documents -->
+
+    <script type="text/javascript">
       $(function () { formInit(); });
+      $('a.media').media({width:'100%', height:400});
     </script>
     <!-- END GLOBAL SCRIPTS -->
   </body>
