--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -374,6 +374,10 @@
     <script type="text/javascript">
       $(function () { formInit(); });
       $('a.media').media({width:'100%', height:400});
+
+      window.onload = function () {
+         jQuery('.faculty-div').hide();
+      }
     </script>
     <!-- END GLOBAL SCRIPTS -->
   </body>
