--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -37,6 +37,7 @@
     <link rel="stylesheet" href="/assets/plugins/timepicker/css/bootstrap-timepicker.min.css" />
     <link rel="stylesheet" href="/assets/plugins/switch/static/stylesheets/bootstrap-switch.css" />
     <link rel="stylesheet" href="assets/css/bootstrap-fileupload.min.css" />
+    <link href="assets/plugins/dataTables/dataTables.bootstrap.css" rel="stylesheet" />
     <!--END GLOBAL STYLES -->
 
     <!-- PAGE LEVEL STYLES -->
