--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -26,7 +26,7 @@
 
 
 
-    <link href="assets/css/jquery-ui.css" rel="stylesheet" />
+    <link href="/assets/css/jquery-ui.css" rel="stylesheet" />
     <link rel="stylesheet" href="/assets/plugins/uniform/themes/default/css/uniform.default.css" />
     <link rel="stylesheet" href="/assets/plugins/inputlimiter/jquery.inputlimiter.1.0.css" />
     <link rel="stylesheet" href="/assets/plugins/chosen/chosen.min.css" />
@@ -36,12 +36,12 @@
     <link rel="stylesheet" href="/assets/plugins/datepicker/css/datepicker.css" />
     <link rel="stylesheet" href="/assets/plugins/timepicker/css/bootstrap-timepicker.min.css" />
     <link rel="stylesheet" href="/assets/plugins/switch/static/stylesheets/bootstrap-switch.css" />
-    <link rel="stylesheet" href="assets/css/bootstrap-fileupload.min.css" />
-    <link href="assets/plugins/dataTables/dataTables.bootstrap.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/assets/css/bootstrap-fileupload.min.css" />
+    <link href="/assets/plugins/dataTables/dataTables.bootstrap.css" rel="stylesheet" />
     <!--END GLOBAL STYLES -->
 
     <!-- PAGE LEVEL STYLES -->
-    <link href="assets/css/layout2.css" rel="stylesheet" />
+    <link href="/assets/css/layout2.css" rel="stylesheet" />
     <!-- END PAGE LEVEL  STYLES -->
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -368,8 +368,8 @@
     <script src="/assets/plugins/jquery.dualListbox-1.3/jquery.dualListBox-1.3.min.js"></script>
     <script src="/assets/plugins/autosize/jquery.autosize.min.js"></script>
     <script src="/assets/plugins/jasny/js/bootstrap-inputmask.js"></script>
-    <script src="assets/js/formsInit.js"></script>
-    <script src="assets/plugins/jasny/js/bootstrap-fileupload.js"></script>
+    <script src="/assets/js/formsInit.js"></script>
+    <script src="/assets/plugins/jasny/js/bootstrap-fileupload.js"></script>
     <script src="/javascripts/jquery.media.js"></script> <!-- For rendering PDF documents -->
 
     <script type="text/javascript">
