--- a/app/views/pages/home.rhtml
+++ b/app/views/pages/home.rhtml
@@ -1,1 +1,78 @@
-<a class="media" href="/admin/code_book?book_id=<%#=Book.first.book_id%>">dd</a>
+<!--<a class="media" href="/admin/code_book?book_id=<%#=Book.first.book_id%>">dd</a>-->
+
+
+
+
+
+
+<div class="row">
+  <div class="col-lg-12">
+    <ul class="pricing-table" >
+      <li class="col-lg-4">
+        <h3>PRIMARY</h3>
+        <div class="price-body">
+          <div class="price">
+				20
+          </div>
+        </div>
+        <div class="features">
+          <ul>
+            <li>Premium Profile Listing</li>
+            <li>Unlimited File Access</li>
+            <li>Free Appointments</li>
+            <li><strong>5 Bonus Points</strong> every month</li>
+            <li>Customizable Profile Page</li>
+            <li><strong>2 months</strong> support</li>
+          </ul>
+        </div>
+        <div class="footer">
+          <a href="#" class="btn btn-info btn-rect">Browse Primary Books</a>
+        </div>
+      </li>
+      <li class="active danger col-lg-4">
+        <h3>Secondary</h3>
+        <div class="price-body">
+          <div class="price">
+            100
+          </div>
+        </div>
+        <div class="features">
+          <ul>
+            <li>Premium Profile Listing</li>
+            <li>Unlimited File Access</li>
+            <li>Free Appointments</li>
+            <li><strong>20 Bonus Points</strong> every month</li>
+            <li>Customizable Profile Page</li>
+            <li><strong>6 months</strong> support</li>
+          </ul>
+        </div>
+        <div class="footer">
+          <a href="#" class="btn btn-metis-1 btn-lg btn-rect">Browse Secondary Books</a>
+        </div>
+      </li>
+      <li class="col-lg-4">
+        <h3>Tertiary</h3>
+        <div class="price-body">
+          <div class="price">
+            180
+          </div>
+        </div>
+        <div class="features">
+          <ul>
+            <li>Premium Profile Listing</li>
+            <li>Unlimited File Access</li>
+            <li>Free Appointments</li>
+            <li><strong>50 Bonus Points</strong> every month</li>
+            <li>Customizable Profile Page</li>
+            <li><strong>Lifetime</strong> support</li>
+          </ul>
+        </div>
+        <div class="footer">
+          <a href="#" class="btn btn-info btn-rect">Browse Tertiary Books</a>
+        </div>
+      </li>
+
+    </ul>
+    <div class="clearfix"></div>
+  </div>
+</div>
