--- a/app/views/pages/home.rhtml
+++ b/app/views/pages/home.rhtml
@@ -12,7 +12,7 @@
         <h3>PRIMARY</h3>
         <div class="price-body">
           <div class="price">
-				20
+            <%= @primary_books.count %>
           </div>
         </div>
         <div class="features">
@@ -33,7 +33,7 @@
         <h3>Secondary</h3>
         <div class="price-body">
           <div class="price">
-            100
+            <%= @secondary_books.count %>
           </div>
         </div>
         <div class="features">
@@ -54,7 +54,7 @@
         <h3>Tertiary</h3>
         <div class="price-body">
           <div class="price">
-            180
+            <%= @tertiary_books.count %>
           </div>
         </div>
         <div class="features">
