--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -324,9 +324,9 @@
         <div class="well well-small">
           <button class="btn btn-block"> <b>Total Books</b> </button>
           <ul class="list-unstyled">
-            <li>Primary &nbsp; : <span>23,000</span></li>
-            <li>Secondary &nbsp; : <span>53,000</span></li>
-            <li>Tertiary &nbsp; : <span>3,000</span></li>
+            <li>Primary &nbsp; : <span><%= @primary_books.count %></span></li>
+            <li>Secondary &nbsp; : <span><%= @secondary_books.count %></span></li>
+            <li>Tertiary &nbsp; : <span><%= @tertiary_books.count %></span></li>
           </ul>
         </div>
         <div class="well well-small">
