Browse By Category

--- a/app/views/pages/home.rhtml
+++ b/app/views/pages/home.rhtml
@@ -23,7 +23,7 @@
           </ul>
         </div>
         <div class="footer">
-          <a href="#" class="btn btn-info btn-rect">Browse Primary Books</a>
+          <a href="/browse_by_category/<%= @primary_category_id %>" class="btn btn-info btn-rect">Browse Primary Books</a>
         </div>
       </li>
       <li class="active danger col-lg-4">
@@ -41,7 +41,7 @@
           </ul>
         </div>
         <div class="footer">
-          <a href="#" class="btn btn-metis-1 btn-lg btn-rect">Browse Secondary Books</a>
+          <a href="/browse_by_category/<%= @secondary_category_id %>" class="btn btn-metis-1 btn-lg btn-rect">Browse Secondary Books</a>
         </div>
       </li>
       <li class="col-lg-4">
@@ -59,7 +59,7 @@
           </ul>
         </div>
         <div class="footer">
-          <a href="#" class="btn btn-info btn-rect">Browse Tertiary Books</a>
+          <a href="/browse_by_category/<%= @tertiary_category_id %>" class="btn btn-info btn-rect">Browse Tertiary Books</a>
         </div>
       </li>
 
