--- a/app/views/admin/remove_faculties_menu.rhtml
+++ b/app/views/admin/remove_faculties_menu.rhtml
@@ -9,7 +9,7 @@
                 <th>#</th>
                 <th>Faculty Name</th>
                 <th>Date Created</th>
-                <th>&nbsp;</th>
+                <th>Action</th>
               </tr>
             </thead>
             <tbody>
@@ -42,7 +42,7 @@
         <h4 class="modal-title" id="myModalLabel">Delete Faculty</h4>
       </div>
       <div class="modal-body">
-        This will delete the selected competition. The process is <b>irreversible</b>. Are you sure?
+        This will delete the selected faculty. The process is <b>irreversible</b>. Are you sure?
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">No, Am Not Sure</button>
