--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -38,6 +38,7 @@
     <link rel="stylesheet" href="/assets/plugins/switch/static/stylesheets/bootstrap-switch.css" />
     <link rel="stylesheet" href="/assets/css/bootstrap-fileupload.min.css" />
     <link href="/assets/plugins/dataTables/dataTables.bootstrap.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/assets/plugins/social-buttons/social-buttons.css" />
     <!--END GLOBAL STYLES -->
 
     <!-- PAGE LEVEL STYLES -->
