--- a/app/views/admin/view_books_menu.rhtml
+++ b/app/views/admin/view_books_menu.rhtml
@@ -33,6 +33,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
+          <button aria-hidden="true" data-dismiss="modal" class="close" type="button">×</button>
           <h4 class="modal-title" id="H4"> <b>Book Viewing</b></h4>
         </div>
         <div class="modal-body">
