Editing and Deleting users

--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -261,9 +261,9 @@
             <ul class="collapse" id="users-nav">
 
               <li class=""><a href="/new_users_menu"><i class="icon-angle-right"></i> New User </a></li>
-              <li class=""><a href="/edit_users_menu"><i class="icon-angle-right"></i> Edit Users </a></li>
+              <!--<li class=""><a href="/edit_users_menu"><i class="icon-angle-right"></i> Edit Users </a></li>-->
               <li class=""><a href="/view_users_menu"><i class="icon-angle-right"></i> View Users </a></li>
-              <li class=""><a href="/remove_users_menu"><i class="icon-angle-right"></i> Remove Users </a></li>
+              <!--<li class=""><a href="/remove_users_menu"><i class="icon-angle-right"></i> Remove Users </a></li>-->
             </ul>
           </li>
         </ul>
@@ -392,7 +392,39 @@
 
       window.onload = function () {
         jQuery('.faculty-div').hide();
+        setUserTable();
       }
+
+      function setUserTable() {
+        var panels = $('.user-infos');
+        var panelsButton = $('.dropdown-user');
+        panels.hide();
+
+        //Click dropdown
+        panelsButton.click(function() {
+          //get data-for attribute
+          var dataFor = $(this).attr('data-for');
+          var idFor = $(dataFor);
+
+          //current button
+          var currentButton = $(this);
+          idFor.slideToggle(400, function() {
+            //Completed slidetoggle
+            if(idFor.is(':visible'))
+            {
+              currentButton.html('<i class="glyphicon glyphicon-chevron-up text-muted"></i>');
+            }
+            else
+            {
+              currentButton.html('<i class="glyphicon glyphicon-chevron-down text-muted"></i>');
+            }
+          })
+        });
+
+
+        $('[data-toggle="tooltip"]').tooltip();
+
+      };
     </script>
     <!-- END GLOBAL SCRIPTS -->
   </body>
