--- a/app/views/admin/view_by_faculty.rhtml
+++ b/app/views/admin/view_by_faculty.rhtml
@@ -18,9 +18,63 @@
           <td><%= book.title %></td>
           <td><%= book.author %></td>
           <td><%= book.created_at.to_date.strftime("%d-%b-%Y") rescue book.created_at %></td>
-          <td><button class="btn btn-block" onclick="viewBook('<%= book.book_id %>')"><i class="icon-eye-open"></i> View</button></td>
+          <td><button class="btn btn-block" onclick="viewBook('<%= book.book_id %>', '<%= book.title %>', '<%= book.author %>')"><i class="icon-eye-open"></i> View</button></td>
         </tr>
       <% end %>
     </tbody>
   </table>
 </div>
+
+
+<div class="col-lg-12">
+  <div class="modal fade" id="viewBook" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" data-backdrop="static">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button aria-hidden="true" data-dismiss="modal" class="close" type="button">×</button>
+          <h4 class="modal-title" id="H4"> <b id="book-title">Book Viewing</b></h4>
+        </div>
+        <div class="modal-body">
+          &nbsp;
+          <!--<a class="media" href="/books/10.pdf">&nbsp;</a>-->
+          <iframe  width="100%" height="1000px" src=""></iframe>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<script type="text/javascript">
+  function viewBook(bookID, bookTitle, bookAuthor){
+    document.getElementById('book-title').innerHTML = bookTitle + ' By ' + bookAuthor;
+    iframe = document.getElementsByTagName('iframe')[0];
+    iframe.src = '/books/' + bookID + '.pdf'
+    jQuery('#viewBook').modal('show');
+  }
+
+</script>
+<style type="text/css">
+  #viewBook .modal-dialog {
+    width: 94%;
+    padding-top: 15px;
+  }
+
+  #viewBook .modal-header {
+    padding: 6px;
+  }
+
+  #viewBook .modal-footer {
+    margin-top: -16px;
+    padding: 19px 38px 12px;
+    text-align: right;
+  }
+
+  #viewBook .modal-body{
+    padding: 1px;
+  }
+</style>
