--- a/app/views/admin/view_faculties_menu.rhtml
+++ b/app/views/admin/view_faculties_menu.rhtml
@@ -20,8 +20,8 @@
                   <td><%= count %></td>
                   <td><%= faculty.name %></td>
                   <td>
-                    <button class="btn btn-default btn-circle btn-lg" type="button">
-                      <%= faculty.book_faculties.count %>
+                    <button onclick="browseByFaculty('<%= faculty.faculty_id %>')"class="btn btn-default btn-circle btn-lg" type="button">
+                      <%= faculty.books.count %>
                     </button>
                   </td>
                   <td><%= faculty.created_at.to_date.strftime("%d-%b-%Y") rescue faculty.created_at %></td>
@@ -34,3 +34,10 @@
     </div>
   </div>
 </div>
+
+<script type="text/javascript">
+  function browseByFaculty(facultyID){
+    window.location = '/view_by_faculty/' + facultyID;
+  }
+  
+</script>
